@@ -7,6 +7,8 @@ Bug fixes
 - Changing variable appearing in "source" statement of a base template
   from the derived target now works as expected.
 - Simplify paths involving $(builddir) in the "gnu" toolset output.
+- Don't give spurious "unused variable" warnings for conditionally defined
+  settings.
 
 
 v1.2.5 (2014-07-28)
